[project]
name = "trung-clone-voice-youtube-8686"
version = "1.0.0"
description = "Giao dien tieng Viet clone giong VoxCPM2 - batch YouTube"
requires-python = ">=3.10"
dependencies = [
    "gradio-client>=1.0",
    "numpy",
    "soundfile",
    "lameenc>=1.8.4",
    "num2words>=0.5.14",
    "psutil",
]

[tool.uv]
package = false
